cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    CloudFormation Template for Roman Numerals Converter Application. 
    This template creates Python Flask Web Application on Amazon Linux 2023  
    EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
    Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.
Parameters:
  
  InstanceType:
    Description: Select your instance type.
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.nano

  KeyName:
    Description: my ec2 keypair
    Type: AWS::EC2::KeyPair::KeyName
  
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64'

Resources:

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "kodal-roman numeral-app-secgroup-80-22-8080" # Required
      
      SecurityGroupIngress: 
        - FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80

        - FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
        
        - FromPort: 8080
          IpProtocol: "tcp"
          ToPort: 8080
      Tags: 
        - Key: Name
          Value: Kodal-romanNumeral-SecGroup-22-80-8080


  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds: 
        - !Ref WebServerSecurityGroup


      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        cd /home/ec2-user
        FOLDER="https://raw.githubusercontent.com/nnwachi/Project-001-roman-numerals-converter/refs/heads/main"
        wget -P templates ${FOLDER}/templates/index.html
        wget -P templates ${FOLDER}/templates/result.html
        wget ${FOLDER}/app.py
        python3 app.py

      Tags: 
        - Key: Name
          Value: Kodal-RomanNumeral-ec2


Outputs:
  WebSiteURL:
    Description: It gives PublicIP
    Value: !Sub 
      - http://${PIA}:80
      - PIA: !GetAtt WebServerHost.PublicDnsName
